se adiciona el endpoint usuario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.config.import=file:env.properties
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+sprint.data.mongodb.host=localhost
+sprint.data.mongodb.port=27017
+spring.data.mongodb.database=your_db_name
+spring.data.mongodb.uri=${DB_CREDENTIALS}
 
