se ajusta endpoint factura

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-spring.config.import=file:env.properties
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-spring.data.mongodb.uri=${DB_CREDENTIALS}
+spring.data.mongodb.uri=mongodb://Jefferson-Benavides:admin123@ac-qw8do9w-shard-00-00.tnf5y9j.mongodb.net:27017,ac-qw8do9w-shard-00-01.tnf5y9j.mongodb.net:27017,ac-qw8do9w-shard-00-02.tnf5y9j.mongodb.net:27017/FruverTest?replicaSet=atlas-aysdbj-shard-0&ssl=true&authSource=admin
 
